# bug-cibuildwheel-proj-mount-minimal-example

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
